--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
+</a href="2019-03-20.html">2019-03-20.html</a><br>
 <a href='2019-03-20.html'>2019-03-20</a><br>
 <a href='2019-03-19.html'>2019-03-19</a><br>
