--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<a href="2019-03-21.html">2019-03-21.html</a><br>
+<a href="2019-03-20.html">2019-03-20.html</a><br>
 <a href="2019-03-20.html">2019-03-20.html</a><br>
 <a href="2019-03-20.html">2019-03-20.html</a><br>
 <a href='2019-03-20.html'>2019-03-20</a><br>
