--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<a href="2019-03-26.html">2019-03-26.html</a><br>
 <a href="2019-03-25.html">2019-03-25.html</a><br>
 <a href="2019-03-24.html">2019-03-24.html</a><br>
 <a href="2019-03-23.html">2019-03-23.html</a><br>
