--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<a href="2019-03-31.html">2019-03-31.html</a><br>
 <a href="2019-03-30.html">2019-03-30.html</a><br>
 <a href="2019-03-29.html">2019-03-29.html</a><br>
 <a href="2019-03-28.html">2019-03-28.html</a><br>
