--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<a href="2019-04-03.html">2019-04-03.html</a><br>
 <a href="2019-04-02.html">2019-04-02.html</a><br>
 <a href="2019-04-01.html">2019-04-01.html</a><br>
 <a href="2019-03-31.html">2019-03-31.html</a><br>
