--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<a href="2019-04-07.html">2019-04-07.html</a><br>
 <a href="2019-04-06.html">2019-04-06.html</a><br>
 <a href="2019-04-05.html">2019-04-05.html</a><br>
 <a href="2019-04-04.html">2019-04-04.html</a><br>
