--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<a href="2019-04-09.html">2019-04-09.html</a><br>
 <a href="2019-04-08.html">2019-04-08.html</a><br>
 <a href="2019-04-07.html">2019-04-07.html</a><br>
 <a href="2019-04-06.html">2019-04-06.html</a><br>
