--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<a href="2019-04-12.html">2019-04-12.html</a><br>
 <a href="2019-04-11.html">2019-04-11.html</a><br>
 <a href="2019-04-10.html">2019-04-10.html</a><br>
 <a href="2019-04-09.html">2019-04-09.html</a><br>
