--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<a href="2019-04-17.html">2019-04-17.html</a><br>
 <a href="2019-04-16.html">2019-04-16.html</a><br>
 <a href="2019-04-15.html">2019-04-15.html</a><br>
 <a href="2019-04-14.html">2019-04-14.html</a><br>
