--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<a href="2019-04-20.html">2019-04-20.html</a><br>
 <a href="2019-04-19.html">2019-04-19.html</a><br>
 <a href="2019-04-18.html">2019-04-18.html</a><br>
 <a href="2019-04-17.html">2019-04-17.html</a><br>
