--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<a href="2019-05-02.html">2019-05-02.html</a><br>
 <a href="2019-05-01.html">2019-05-01.html</a><br>
 <a href="2019-04-30.html">2019-04-30.html</a><br>
 <a href="2019-04-29.html">2019-04-29.html</a><br>
