--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<a href="2019-05-06.html">2019-05-06.html</a><br>
 <a href="2019-05-05.html">2019-05-05.html</a><br>
 <a href="2019-05-04.html">2019-05-04.html</a><br>
 <a href="2019-05-03.html">2019-05-03.html</a><br>
