--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<a href="2019-05-08.html">2019-05-08.html</a><br>
 <a href="2019-05-07.html">2019-05-07.html</a><br>
 <a href="2019-05-06.html">2019-05-06.html</a><br>
 <a href="2019-05-05.html">2019-05-05.html</a><br>
