--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<a href="2019-05-14.html">2019-05-14.html</a><br>
 <a href="2019-05-13.html">2019-05-13.html</a><br>
 <a href="2019-05-12.html">2019-05-12.html</a><br>
 <a href="2019-05-11.html">2019-05-11.html</a><br>
